--- a/file1.html
+++ b/file1.html
@@ -13,6 +13,45 @@
     <body>
         <h1 style = "align-content: center;color :blueviolet">basic web programs</h1>
         <h2>hello everone!</h2>
+        <table>
+            <thread>
+                <tr>
+                    <th>
+                        names
+                    </th>
+                    <th>
+                        age
+                    </th>
+                    <th>
+                        roll no
+                    </th>
+                </tr>
+            </thread>
+            <tbody>
+                <tr>
+                    <td>
+                        chaitanya
+                    </td>
+                    <td>
+                        21
+                    </td>
+                    <td>
+                        567
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        pavan
+                    </td>
+                    <td>
+                        22
+                    </td>
+                    <td>
+                        456
+                    </td>
+                </tr>
+            </tbody>
+        </table>
         <a href = "https://ictacademy.skycampus.in/#/directlogin">click here</a>
     </body>
 </html>
